--- a/oantuti/src/BaiTapOanTuXi/BaiTapOanTuXi.css
+++ b/oantuti/src/BaiTapOanTuXi/BaiTapOanTuXi.css
@@ -4,13 +4,13 @@
     height: 100%;
     background-image: url('../assets/bgGameOanTuXi.png');
     background-size: 100%;
-    /* font-family: fontGame; */
+    font-family: fontGame;
 }
 
-/* @font-face {
+@font-face {
     font-family: 'fontGame';
-    src: url('../font/Pony.ttf');
-} */
+    src: url('./font/Pony.ttf');
+}
 
 .theThink {
     border: 5px solid #45D994;
